Finalized optimized properties