@@ -8,7 +8,8 @@ import java.util.List;
 
 import nl.waredingen.graphs.neo.mapreduce.DualInputMapReduceDriver;
 
-import org.apache.hadoop.io.LongWritable;
+import org.apache.hadoop.io.BytesWritable;
+import org.apache.hadoop.io.NullWritable;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.mrunit.types.Pair;
 import org.junit.Before;
@@ -16,13 +17,13 @@ import org.junit.Test;
 
 public class JoinFromNodesAndEdgesMapReduceTest {
 
-	private DualInputMapReduceDriver<LongWritable,Text,LongWritable,Text,Text,Text,Text,Text> driver;
-	private List<Pair<Text, Text>> output;
+	private DualInputMapReduceDriver<NullWritable,BytesWritable,NullWritable,BytesWritable,Text,Text,NullWritable,Text> driver;
+	private List<Pair<NullWritable, Text>> output;
 
 	@SuppressWarnings("unchecked")
 	@Before
 	public void setUp() throws Exception {
-		driver = new DualInputMapReduceDriver<LongWritable, Text, LongWritable, Text, Text, Text, Text, Text>();
+		driver = new DualInputMapReduceDriver<NullWritable,BytesWritable,NullWritable,BytesWritable, Text, Text, NullWritable, Text>();
 		driver.setFirstMapper(new JoinNodesMapper());
 		driver.setSecondMapper(new JoinFromEdgesMapper());
 		driver.setReducer(new JoinNodesAndEdgesReducer());
@@ -32,11 +33,17 @@ public class JoinFromNodesAndEdgesMapReduceTest {
 
 	@Test
 	public void shouldjoinFromNodeAndEdge() throws Exception {
-		driver.withFirstInput(new LongWritable(0), new Text("0	A	Aname")).addInput(new LongWritable(1), new Text("1	B	Bname"));
-		output = driver.withSecondInput(new LongWritable(0), new Text("0	A	B")).run();
+		Text nodeA = new Text("0	A	1");
+		BytesWritable nodeAInput = new BytesWritable(nodeA.getBytes());
+		Text nodeB = new Text("1	B	3");
+		BytesWritable nodeBInput = new BytesWritable(nodeB.getBytes());
+		Text edge = new Text("0	A	B	5");
+		BytesWritable edgeInput = new BytesWritable(edge.getBytes());
+		driver.withFirstInput(NullWritable.get(), nodeAInput).addInput(NullWritable.get(), nodeBInput);
+		output = driver.withSecondInput(NullWritable.get(), edgeInput).run();
 
 		assertThat(output.size(), is(1));
-		assertThat(output.get(0).getFirst(), equalTo(new Text("RB")));
-		assertThat(output.get(0).getSecond(), equalTo(new Text("0	A	B	0	A	Aname")));
+		assertThat(output.get(0).getFirst(), equalTo(NullWritable.get()));
+		assertThat(output.get(0).getSecond(), equalTo(new Text("0	A	B	5	0	1")));
 	}
 }
